update nav page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10248,6 +10248,10 @@ ul.checkmark li {
 .nav-pro-bg-white-pd{
   margin-bottom: -60px;
 }
+.top-button-p{
+  margin-top: -80px;
+  padding-bottom:100px
+}
 
 @media (min-width:1200px) and (max-width:1400px){
   .over-heading-nav h3 {
