--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10330,6 +10330,9 @@ ul.checkmark li {
   }
 }
 @media (max-width:991px){
+  .top-button-p {
+    margin-top: -40px 
+  }
   .Solution-banner.nav-solution .ceb {
     text-align: center;
     margin-bottom: 40px;
