--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4494,7 +4494,7 @@ section {
 .slider-new-com {
 }
 .slider-new-com h3 {
-  color: var(--color-blue);
+  color: #d77b83;
   font-size: 30px;
   font-weight: 700;
   margin-bottom: 30px;
